--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">RollUp</string>
+
+    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
+
+    <!-- Change the following strings as required -->
+    <string name="back4app_app_id">xjZenQbpJjVk9qMnvNwcNuNayGWToEHn60nmsuXh</string>
+    <string name="back4app_client_key">q4mJXQCJhieNTNPczlwgRALhIeqNiVfzKC6xtRpb</string>
 </resources>
